# kbsb

./: .env  .flake8  .gcloudignore  .gitignore  .ruff.toml  20250209.csv  Dockerfile_backend  Dockerfile_frontend  LICENSE.md  Pipfile  README 3.md  README.md  README2.md  VERSION  app.yaml  create_env  dispatch.yaml  dist  docker-compose.yml  env_local.py  env_localtest.py  env_prodtest.py  frbekbsb_google_credentials.json  icn_trf.txt  kbsb.code-workspace  kbsb_sendemail.json  launch  main.py  manage.py  poe_tasks.yaml  pyproject.toml  requirements.txt  ruff.toml  setup  setup.py  trf.mongodb.js  vetur.config,js
.idx/: dev.nix
backend/: .env  .gcloudignore  AUTHORS  ChangeLog  ICN_R2_part1.txt  ICN_R3_part1.txt  MANIFEST.in  Ongeldig FIDE id.txt  app-test.yaml  app.yaml  double.csv  env_docker.py  env_local.py  env_localtest.py  env_prodtest.py  env_staging.py  icn_trf.txt  local_settings.py  penalties_R2.csv  penalties_R4.csv  pyproject.toml  reddevil  requirements.txt  setup.cfg  setup.py
backend/cdmembers/: apiviews.py  models.py  urls_apimembers.py  views.py
backend/data/: ic2425.yml  translations - kbsb.csv
backend/etl/: create_icclub_2425.py  setpwold.py
backend/kbsb/: __init__.py  context_processor.py  kbsb_reddevil.code-workspace  local_settings.py  main.py  settings.py  tst_endpoints.py  urls.py  views.py  wsgi.py
backend/kbsb.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  top_level.txt
backend/kbsb/api/: __init__.py  api_book100.py  api_club.py  api_file.py  api_member.py  api_site.py
backend/kbsb/club/: __init__.py  api_club.py  club.py  md_club.py
backend/kbsb/core/: db.py
backend/kbsb/crud/: __init__.py  db_book100.py  db_club.py  db_member.py
backend/kbsb/db/: __init__.py  db_file.py  mysql_signaletique.py
backend/kbsb/etl/: create_game_table.py  create_icclub_2425.py  create_icclub_2526.py  create_icseries_2425.py  create_icseries_2526.py  fide4elo.py  i18n.py  read_oldplayerlist.py  su.py
backend/kbsb/interclub/: __init__.py  interclub_club.py  interclub_old.py  md_interclubclub.py  md_interclubvenues.py
backend/kbsb/interclubs/: __init__.py  api_interclubs.py  elo.py  enrollments.py  helpers.py  icclubs.py  md_elo.py  md_interclubs.py  penalties.py  registrations.py  series.py  validation.py  venues.py
backend/kbsb/member/: api_member.py  md_member.py  member.py  mysql_member.py
backend/kbsb/models/: md_club.py
backend/kbsb/mysql/: __init__.py  mysql_base.py
backend/kbsb/oldkbsb/: api_old.py  md_old.py  md_oldclub.py  md_oldinterclub.py  md_oldmember.py  md_oldrating.py
backend/kbsb/page/: __init__.py  api_page.py  page.py
backend/kbsb/report/: api_report.py
backend/kbsb/scripts/: i18n.py  setpwold.py
backend/kbsb/service/: book100.py  club.py  file.py  mail.py  mailbackend.py  member.py  secrets.py  site.py
backend/kbsb/statamic/: statamic.py
backend/kbsb/static/: __init__.py
backend/kbsb/templates/: base.html  cms.html  cms_base.html  cms_landing.html  cms_nosidebar.html  cms_sidebar.html  landing.html  mgmt.html  page.html  testpage1.html  vue_base.html  vuecms.html  vuelanding.html
backend/kbsb/tournament/: __init__.py  api_tournament.py  md_swar.py  md_tournament.py
backend/kbsb/util/: __init__.py  colorlogfactory.py
backend/kbsbarticles/: apiurls.py  apiviews.py  cms_plugins.py  models.py  urls.py  views.py
backend/kbsbarticles/migrations/: 0002_auto_20190426_1731.py  0002_kbsbmarkdownview.py  0003_auto_20190429_1511.py  0003_kbsbmarkdownview_sanitize.py  0004_kbsbarticlesintroview.py  0005_remove_kbsbarticlesintroview_ss.py  0006_remove_kbsbarticlesintroview_locale.py
backend/kbsbdoc/: apiurls.py  apiviews.py  apps.py  cms_plugins.py  context_processor.py  models.py  urls.py  views.py
backend/kbsbdoc/migrations/: 0001_initial.py  0002_auto_20190522_2107.py  0003_kbsbdocgroupview.py  0004_auto_20190524_1401.py  0005_kbsbphplinkview.py
backend/kbsbmembers/: admin.py  apiviews.py  cms_plugins.py  models.py  urls.py  views.py
backend/kbsbmembers/migrations/: 0001_initial.py  0002_auto_20190505_1451.py  0002_auto_20190617_1336.py  0002_kbsbmember_privacy.py  0003_auto_20190506_2058.py  0003_auto_20190508_1023.py
backend/libs/: reddevil-3.4.3-py3-none-any.whl
backend/tests/club/: test_api_club.py
backend/tests/factories/: __init__.py  club_factory.py  interclubs_factory.py
backend/tests/interclub/: conftest.py  test_api_interclub.py  test_enrollments.py  test_icclub.py  test_registrations.py  test_series.py  test_validation.py
kbsb_backend/: .gcloudignore  Pipfile  app-prod.yaml  app-test.yaml  boardroles.yaml  env_local.py  env_prod.py  env_staging.py  launch  local_settings.py  playerlist_301.xlsx  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  update_prod.yaml
kbsb_backend/kbsb/: main.py  settings.py
kbsb_backend/kbsb/api/: __init__.py  api_club.py  api_file.py  api_old.py
kbsb_backend/kbsb/club/: __init__.py  api_club.py  club.py  db_club.py  md_club.py
kbsb_backend/kbsb/core/: __init__.py  db.py  i18n.py  mail.py
kbsb_backend/kbsb/db/: __init__.py  db_club.py  db_file.py  db_interclub.py  p_clubs.py  p_user.py
kbsb_backend/kbsb/etl/: create_game_table.py  import_club196.py  import_clubs.py  import_ic_previous.py  read_oldicgames.py  read_oldplayerlist.py  read_series.py
kbsb_backend/kbsb/interclub/: __init__.py  api_interclub.py  db_interclub.py  interclub.py  interclub_club.py  interclub_match.py  interclub_old.py  md_interclub.py  md_interclubenrollment.py  md_interclubmatch.py  md_interclubseries.py
kbsb_backend/libs/: reddevil-2.5.10-py3-none-any.whl  reddevil-2.5.11-py3-none-any.whl  reddevil-2.5.12-py3-none-any.whl  reddevil-2.5.13-py3-none-any.whl  reddevil-2.5.15-py3-none-any.whl  reddevil-2.5.4-py3-none-any.whl  reddevil-2.5.5-py3-none-any.whl  reddevil-2.5.6-py3-none-any.whl  reddevil-2.5.8-py3-none-any.whl  reddevil-2.5.9-py3-none-any.whl  reddevil-2.6.1-py3-none-any.whl  reddevil-3.0.0-py3-none-any.whl
kbsb_backend/scripts/: csv2lang.py  su.py  test_email.py
(+892 files in other folders)
