[tool.poetry]
name = "kbsb"
version = "1.0.0"
description = ""
authors = ["Ruben Decrop <ruben.decrop@frbe-kbsb-ksb.be>"]

[tool.poetry.dependencies]
python = "^3.9"
dnspython = "^2.2.1"
fastapi = "^0.77.1"
google = "^3.0.0"
google-api-python-client = "^2.47.0"
google-auth = "^2.6.6"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.1"
google-cloud-secret-manager = "^2.10.0"
google-cloud-storage = "^2.3.0"
gunicorn = "^20.1.0"
uvicorn = "^0.17.6"
markdown2 = "^2.4.3"
motor = "^3.0.0"
mysql-connector-python = "^8.0.29"
passlib = "^1.7.4"
python-dateutil = "^2.8.2"
python-jose = {extras = ["cryptograph"], version = "^3.3.0"}
python-slugify = "^6.1.2"
PyYAML = "^6.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
