[project]
name = "kbsb"
version = "3.7.0"
description = "API Website FRBE-KBSB-KSB"
readme = "README.md"
authors = [
    { name = "Ruben Decrop", email = "ruben.decrop@frbe-kbsb-ksb.be" }
]

requires-python = ">=3.13"
dependencies = [
    "aiocsv>=1.3.2",
    "aiofiles>=24.1.0",
    "async-lru>=2.0.5",
    "asyncclick>=8.1.8",
    "asyncssh>=2.21.0",
    "fastapi[standard]>=0.116.1",
    "google>=3.0.0",
    "google-api-python-client>=2.178.0",
    "google-auth>=2.40.3",
    "google-cloud-secret-manager>=2.24.0",
    "google-cloud-storage>=3.2.0",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "mysql-connector-python>=9.4.0",
    "openpyxl>=3.1.5",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
    "reddevil",
    "requests>=2.32.4",
    "toml>=0.10.2",
    "unidecode>=1.4.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "asyncio>=4.0.0",
    "black>=25.1.0",
    "djlint>=1.40.5",
    "freezegun>=1.5.5",
    "mypy>=1.17.1",
    "polyfactory>=2.22.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.8",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["E402"]

[tool.uv.sources]
reddevil = { path = "libs/reddevil-3.5.5-py3-none-any.whl" }

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
