[metadata]
name = kbsbapp
description = kbsb website
long_description = djnago app for kbsb website 
classifiers =
    "Programming Language :: Python"
    "Framework :: Falcon"

author = Ruben Decrop
author_email = ruben@decrop.net
url = https://www.frbe-kbsb.be
keywords =
    Chess
    Federation
    Belgium
packages = pbr

[files]
packages =
    kbsb
    kbsbmembers
    kbsbarticles

[entry_points]
console_scripts =
    pbr = pbr.cmd:main
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain