[metadata]
name = kbsb
description = kbsb website
long_description = django app for kbsb website 
classifiers =
    "Programming Language :: Python"
    "Framework :: Falcon"

author = Ruben Decrop
author_email = ruben@decrop.net
url = https://www.frbe-kbsb.be
keywords =
    Chess
    Federation
    Belgium
packages = pbr

[files]
packages =
    kbsb
    kbsbmembers
    kbsbarticles

data_files = 
    kbsbmembers/templates = kbsbmembers/templates/* 
    kbsbarticles/templates = kbsbarticles/templates/* 
    kbsb/templates = kbsb/templates/* 

[entry_points]
console_scripts =
    pbr = pbr.cmd:main
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain