[tool.poetry]
name = "kbsb_backend"
version = "1.0.0"
description = "Website FRBE-KBSB-KSB"
authors = ["Ruben Decrop <ruben.decrop@frbe-kbsb-ksb.be>"]
license = "GPLv2"

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^0.8.0"
bcrypt = "^3.2.2"
colorlog = "^6.6.0"
dnspython = "^2.2.1"
fastapi = "^0.76.0"
google = "^3.0.0"
google-api-python-client = "^2.47.0"
google-auth = "^2.6.6"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.1"
google-cloud-secret-manager = "^2.10.0"
google-cloud-storage = "^2.3.0"
gunicorn = "^20.1.0"
markdown2 = "^2.4.3"
motor = "^3.0.0"
passlib = "^1.7.4"
pymongo = "^4.1.1"
python-dateutil = "^2.8.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
PyYAML = "^6.0"
requests = "^2.27.1"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.36"
PyMySQL = "^1.0.2"
reddevil = {path = "libs/reddevil-2.5.9-py3-none-any.whl"}
python-slugify = "^6.1.2"

[tool.poetry.dev-dependencies]
asyncio = "^3.4.3"
black = "^22.3.0"
httpx = "^0.22.0"
mypy = "^0.950"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
